--- a/scss/index.scss
+++ b/scss/index.scss
@@ -150,6 +150,7 @@ path {
     width: 100%;
     height: 100%;
     overflow: visible;
+    stroke-dasharray: 400;
 
     &.highlight {
         z-index: 1;
@@ -163,6 +164,12 @@ path {
         & ~ .leaf_connections {
             z-index: -5;
         }
+    }
+
+    &.removing {
+        stroke-dasharray: 400;
+        stroke-dashoffset: 400;
+        transition: all .2s ease-in-out;
     }
 }
 
@@ -914,6 +921,13 @@ input[name*="profile_photo"] {
 
     > * {
         pointer-events: none;
+    }
+
+    &.removing {
+        filter: grayscale(1);
+        transform: scale(0);  
+        opacity: 0;      
+        transition: all .2s ease-out;
     }
 
     .leaf_caption {
