--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1276,6 +1276,9 @@ button,
 .u-mar-b_0 {
   margin-bottom: 0px; }
 
+.u-mar-b_0 {
+  margin-bottom: 0px; }
+
 .u-mar-b_point5 {
   margin-bottom: 4px; }
 
@@ -1341,6 +1344,9 @@ button,
 
 .u-mar-b_7 {
   margin-bottom: 56px; }
+
+.u-mar-b_8 {
+  margin-bottom: 64px; }
 
 .u-ta_center {
   text-align: center; }
