--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1859,6 +1859,9 @@ button,
 .u-mar-b_0 {
     margin-bottom: 0px;
 }
+.u-mar-b_0 {
+    margin-bottom: 0px;
+}
 
 .u-mar-b_point5 {
     margin-bottom: 4px;
@@ -1941,6 +1944,10 @@ button,
 
 .u-mar-b_7 {
     margin-bottom: 56px;
+}
+
+.u-mar-b_8 {
+    margin-bottom: 64px;
 }
 
 .u-ta_center {
