populating name and addresses in details panel

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,13 +164,6 @@ path {
     text-decoration: none;
     min-height: 72px;
     box-shadow: 0 1px 0 var(--color_border); }
-    #myTree__list .myTree__item:hover, #myTree__list .myTree__item:focus {
-      border-radius: 8px;
-      outline: none;
-      background-color: var(--brand_lighter);
-      box-shadow: 0 1px 0 transparent; }
-    #myTree__list .myTree__item:active {
-      background-color: rgba(0, 0, 0, 0.05); }
 
 #branchContainer {
   display: flex;
@@ -397,7 +390,8 @@ path {
   display: flex; }
 
 .detailsPanel__item {
-  position: relative; }
+  position: relative;
+  display: flex; }
   .detailsPanel__item:hover:before {
     content: "";
     position: absolute;
@@ -424,17 +418,13 @@ path {
   vertical-align: middle;
   opacity: .6; }
 
-.detailsPanel__fullName {
-  opacity: .5;
-  color: var(--brand); }
-  .detailsPanel__fullName:empty {
-    display: none; }
-
 .detailsPanel__img {
+  min-width: var(--detailsPanelImgSize);
   width: var(--detailsPanelImgSize);
   height: var(--detailsPanelImgSize);
   border-radius: 50%;
-  background-color: var(--color_yellow);
+  background-color: white;
+  box-shadow: 0 0 0 1px var(--color_border);
   overflow: hidden;
   background-size: cover;
   background-position: center;
@@ -457,8 +447,7 @@ path {
   height: var(--profileImageSize);
   border-radius: 8px;
   display: block;
-  background-color: lightgray;
-  background-color: var(--color_yellow);
+  background-color: white;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
@@ -466,7 +455,7 @@ path {
 input[class*="profile_photo"],
 input[name*="profile_photo"] {
   min-height: 200px;
-  background-color: var(--color_yellow);
+  background-color: white;
   width: 200px;
   border-radius: 8px;
   background-size: cover;
@@ -704,7 +693,7 @@ select {
   input[type=date]:hover,
   input[type=tel]:hover,
   select:hover {
-    box-shadow: 0 0 0 2px var(--color_border); }
+    box-shadow: 0 0 0 3px var(--color_border); }
   input[type=text]:focus,
   input[type=email]:focus,
   input[type=password]:focus,
@@ -713,7 +702,7 @@ select {
   input[type=tel]:focus,
   select:focus {
     outline: 0px solid transparent;
-    box-shadow: 0 0 0 2px var(--color_outline); }
+    box-shadow: 0 0 0 4px var(--color_outline); }
 
 .checkboxGroup {
   display: flex;
@@ -790,6 +779,10 @@ select {
     flex: 1;
     text-align: center;
     margin-bottom: 0; }
+    .radioGroup label:focus {
+      background-color: var(--brand_lighter);
+      outline: 0px solid transparent;
+      box-shadow: 0 0 0 4px var(--color_outline); }
 
 .select-wrapper {
   padding: 0;
@@ -1067,7 +1060,8 @@ button,
   border-radius: 8px;
   background-color: white;
   padding: 8px 0;
-  z-index: 999; }
+  z-index: 999;
+  min-width: 120px; }
   .dropdown__item {
     padding: 12px 20px;
     font-weight: bold;
@@ -1083,6 +1077,9 @@ button,
     .dropdown__item:active {
       background-color: rgba(0, 40, 49, 0.04);
       cursor: pointer; }
+    .dropdown__item:focus {
+      outline: 0 solid transparent;
+      box-shadow: 0 0 0 4px var(--color_outline) inset; }
   .dropdown__label {
     text-transform: uppercase;
     letter-spacing: 1px;
