--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,8 +118,7 @@ path {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: visible;
-  stroke-dasharray: 400; }
+  overflow: visible; }
   .leaf_connections.highlight {
     z-index: 1; }
     .leaf_connections.highlight path {
@@ -168,6 +167,8 @@ path {
 #branchContainer {
   display: flex;
   max-width: 100vw;
+  padding-left: 40px;
+  padding-right: 40px;
   transition: width 0.2s ease-in-out; }
 
 #familyTree__list {
@@ -963,8 +964,7 @@ button,
     transition: opacity .2s ease-in-out; }
     [tooltip]:hover:after {
       opacity: 1;
-      right: calc(100% + 8px);
-      transition-delay: .65s; }
+      right: calc(100% + 8px); }
   [tooltip]:focus {
     z-index: 99; }
     [tooltip]:focus:after {
