--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1048,14 +1048,14 @@ input[name*="profile_photo"] {
         }
     }  
 
-    .dropdown {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        top: initial;
-        z-index: 999;
-    }
+    // .dropdown {
+    //     position: fixed;
+    //     bottom: 0;
+    //     left: 0;
+    //     right: 0;
+    //     top: initial;
+    //     z-index: 999;
+    // }
 }
 
 // cards
