--- a/public/css/style.css
+++ b/public/css/style.css
@@ -380,7 +380,7 @@ path {
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
-    background-size: 100% 200px;
+    background-size: 100% 400px;
     height: 400px;
     z-index: -1; }
   #detailsPanel h6 {
@@ -534,7 +534,8 @@ input[name*="profile_photo"] {
   display: flex;
   justify-content: center;
   margin: var(--leafSpacing);
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, opacity 0.4s ease-in-out;
+  opacity: 1;
   cursor: pointer; }
   .leaf:before {
     content: "";
@@ -543,17 +544,22 @@ input[name*="profile_photo"] {
     height: calc(var(--leafSize) + 24px);
     top: -6px;
     border-radius: 100px;
-    box-shadow: 0 0 0 6px rgba(255, 255, 255, 0) inset, 0 0 0 4px var(--color_outline);
+    box-shadow: 0 0 0 6px rgba(255, 255, 255, 0) inset, 0 0 0 4px var(--color_border);
     opacity: 0;
     transform: scale(0.8);
-    transition: transform 0.2s cubic-bezier(0.66, 0.23, 0.33, 1.02); }
+    transition: transform 0.2s cubic-bezier(0.66, 0.23, 0.33, 1.02), box-shadow 0.2s ease-out; }
   .leaf:active {
     transition: all 0.05s cubic-bezier(0.66, 0.23, 0.33, 1.02); }
-  .leaf.active:before {
-    transition: transform 0.2s cubic-bezier(0.66, 0.23, 0.33, 1.02);
+  .leaf.active:before, .leaf.active:hover:before {
+    transition: transform 0.2s cubic-bezier(0.66, 0.23, 0.33, 1.02), box-shadow 0.2s ease-out;
     opacity: 1;
     transform: scale(1);
     box-shadow: 0 0 0 6px white inset, 0 0 0 4px var(--color_outline); }
+  .leaf:hover:before {
+    transition: transform 0.2s cubic-bezier(0.66, 0.23, 0.33, 1.02), box-shadow 0.2s ease-out;
+    opacity: 1;
+    transform: scale(1);
+    box-shadow: 0 0 0 6px white inset, 0 0 0 4px var(--color_border); }
   .leaf > * {
     pointer-events: none; }
   .leaf.removing {
@@ -561,6 +567,9 @@ input[name*="profile_photo"] {
     transform: scale(0);
     opacity: 0;
     transition: all .2s ease-out; }
+  .leaf.adding {
+    opacity: 0;
+    transition: opacity .4s ease-out; }
   .leaf .leaf_caption {
     position: absolute;
     padding: 8px 12px;
@@ -615,13 +624,14 @@ input[name*="profile_photo"] {
   #detailsPanel {
     left: 0;
     right: 0;
-    bottom: calc(-100vh - var(--navHeight));
+    bottom: -100%;
     top: unset;
     transition: bottom 0.2s ease-in-out;
-    max-height: calc(100vh - (var(--navHeight) + 12vh));
+    max-height: unset;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    box-shadow: 0 0 24px rgba(0, 40, 49, 0.25); }
+    box-shadow: 0 0 24px rgba(0, 40, 49, 0.25);
+    z-index: 99999; }
 
   .mainNav {
     align-items: baseline;
@@ -639,7 +649,8 @@ input[name*="profile_photo"] {
     width: 100vw; }
   #mainContent.showDetails #detailsPanel {
     right: unset;
-    bottom: 0; } }
+    bottom: 0;
+    transition: bottom 0.2s ease-in-out; } }
 .card {
   --cardMaxWidth: 352px;
   --cardPadding: 24px;
