--- a/scss/index.scss
+++ b/scss/index.scss
@@ -582,7 +582,7 @@ path {
     width: var(--accountMenuSize);
     height: var(--accountMenuSize);
     border-radius: 8px;
-    background-color: var(--color_yellow);
+    background-color: white;
     padding: 0;
     background-size: cover;
     background-position: center;
@@ -1014,6 +1014,24 @@ input[name*="profile_photo"] {
     padding-top: 0px;
 }
 
+.fauxToggle {
+    display: flex;
+    border-radius: var(--iconButtonSize);
+    box-shadow: 0 0 0 1px var(--color_border);
+    max-height: var(--iconButtonSize);
+
+    &:hover {
+        box-shadow: 0 0 0 3px var(--color_border);
+    }
+
+    .iconButton {
+        &:focus,
+        &:hover {
+            transform: none;
+        }
+    }
+}
+
 #toolbar {
     width: 100%;
     max-height: 0;
@@ -1147,6 +1165,7 @@ input[type=password],
 input[type=number],
 input[type=date],
 input[type=tel],
+input[type=search],
 select {
     -webkit-appearance: none;
     padding: 12px 16px;
@@ -1164,6 +1183,36 @@ select {
     &:focus {
         outline: 0px solid transparent;
         box-shadow: 0 0 0 4px var(--color_outline);
+    }
+}
+
+.searchGroup {
+    display: flex;
+    position: relative;
+    align-items: center;
+
+    i {
+        position: absolute;
+        left: 16px;
+        opacity: .75;
+        transition: all $detailsRevealTiming ease-out;
+    }
+
+    input[type=search] {
+        border-radius: 24px;
+        padding-left: 44px;
+        transition: all $detailsRevealTiming ease-out;
+    }
+
+    &:focus-within {
+        input[type=search] {
+            padding-left: 16px;
+        }
+
+        i {
+            opacity: 0;
+            left: -16px;
+        }
     }
 }
 
@@ -1430,6 +1479,11 @@ button,
 
     &.danger {
         background-color: var(--color_danger);
+    }
+
+    &.yellow {
+        background-color: var(--color_yellow);
+        color: var(--brand);
     }
 
     &.disabled {
@@ -1971,13 +2025,14 @@ button,
 .u-mar-r_auto {
     margin-right: auto;
 }
-
 .u-mar-r_1 {
     margin-right: 8px;
 }
-
 .u-mar-r_2 {
     margin-right: 16px;
+}
+.u-mar-r_3 {
+    margin-right: 24px;
 }
 
 .u-mar-b_0 {
